packages/docs/content/4.0/api/CCarousel.api.mdx

```jsx
import { CCarousel } from '@coreui/react'
// or
import CCarousel from '@coreui/react//Users/lukaszholeczek/CoreUI/@coreui/react/packages/coreui-react/src/components/carousel/CCarousel'
```

| Property | Description | Type | Default |
| --- | --- | --- | --- |
| **activeIndex** | index of the active item. | `number` | 0 |
| **className** | A string of all className you want applied to the base component. | `string` | - |
| **controls** | Adding in the previous and next controls. | `boolean` | - |
| **dark** | Add darker controls, indicators, and captions. | `boolean` | - |
| **indicators** | Adding indicators at the bottom of the carousel for each item. | `boolean` | - |
| **interval** | The amount of time to delay between automatically cycling an item. If false, carousel will not automatically cycle. | `number` \| `boolean` | 5000 |
| **onSlid** | Callback fired when a slide transition end. | `(active: number, direction: string) => void` | - |
| **onSlide** | Callback fired when a slide transition starts. | `(active: number, direction: string) => void` | - |
| **pause** | If set to 'hover', pauses the cycling of the carousel on mouseenter and resumes the cycling of the carousel on mouseleave. If set to false, hovering over the carousel won't pause it. | `boolean` \| `'hover'` | hover |
| **transition** | Set type of the transition. | `'slide'` \| `'crossfade'` | - |
| **wrap** | Set whether the carousel should cycle continuously or have hard stops. | `boolean` | true |
